--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+div >p{
+	background:black;
+	color:white;
+	
+}
+}
+:root {
+  background:rgb(135, 206, 235);
+}
