--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,18 @@ background:black;
 	color:white;
 	position:top;
 	
+	
+}
+.ru{
+	background-color: gray;
+	 margin: 50px;
+	font-size:22px;
+}
+.ru li:nth-child(odd) {
+    background-color: white;
+}
+.ru li:nth-child(3){
+	background-color: pink;
 }
 
 :root {
